generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_object1.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
{ prop13: value111, prop23: value210 }

AST:
(program
  (expression_statement
    (object
      (pair
        (property_identifier)
        (identifier value111)
      )
      (pair
        (property_identifier)
        (identifier value210)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
