generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_parenthesized_expression.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
(value23)

AST:
(program
  (expression_statement
    (parenthesized_expression
      (identifier value23)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
