generated-tests/tests/snapshots/tsx/generated_tests__tsx__test_generated_rest_pattern.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const [first, ...rest] = arr2;

AST:
(program
  (lexical_declaration
    (variable_declarator
      (array_pattern
        (identifier first)
        (rest_pattern
          (identifier rest)
        )
      )
      (identifier arr2)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "[first, ...rest]",
            line_number: 1,
            definition_type: VariableDefinition,
            scope: None,
        },
    ],
    dependencies: [],
    usage: [
        SerializableUsage {
            name: "first",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 8,
            end_line: 1,
            end_column: 13,
        },
        SerializableUsage {
            name: "rest",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 18,
            end_line: 1,
            end_column: 22,
        },
        SerializableUsage {
            name: "arr2",
            kind: Identifier,
            scope: None,
            start_line: 1,
            start_column: 26,
            end_line: 1,
            end_column: 30,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
